package com.example.patronesDeDiseno.Estructurales.Adapter;

public interface AdvancedMediaPlayer {
    void playVlc(String fileName);
    void playMp4(String fileName);
}
