package com.example.patronesDeDiseno.Estructurales.Adapter;

public interface MediaPlayer {
    void play(String audioType, String fileName);
}
